# openmusic-backend

./: .gitignore  .testenv  .testpostgresenv  Dockerfile  README.md  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2a231e63c92f_initial_migration.py  f4a78fc70555_add_cascade_to_associations_tables.py
app/: main.py
app/api/: __init__.py  song.py  token.py  users.py
app/core/: config.py  database.py  db.py  security.py  test_config.py
app/models/: __init__.py  mixins.py  playlist.py  song.py  user.py
app/models/assotiation_tables/: playlist_song.py  user_playlist.py  user_song.py
app/repositories/: base.py  song.py  user.py
app/schemas/: song.py  user.py
app/services/: auth.py  song.py  user.py
tests/: conftest.py  test_song_service.py  test_user_repo.py
